Solve some SonarQube issues